@@ -1,3 +1,10 @@
+urls:
+GET https://rodofumi-googlethursday.rhcloud.com/rest/projectService
+GET https://rodofumi-googlethursday.rhcloud.com/rest/projectService/[id]
+POST https://rodofumi-googlethursday.rhcloud.com/rest/projectService met [project]
+PUT https://rodofumi-googlethursday.rhcloud.com/rest/projectService/
+[id]
+
 Werkwijze:
 via Servers via in Eclipse Incremental publish naar OpenShift
 Voor updaten GitHub: op project in projectexplorer, team>remote>push..
