@@ -1,3 +1,6 @@
+10-01-2013 3
+MongoDB in ProjectBackofficeServiceMongoDB naamgeving gestopt
+
 20-12-2012 2
 MongoDB config toegevoegd (nog een harde verwijzing met OpenShift erin, moet dus nog anders)
 
